# mcp-sse-prototype

./: LICENSE  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  sse_transport.py  stdio_transport.py
