[project]
name = "mcp-sse-prototype"
version = "0.1.0"
description = "Simple prototype to understand custom MCP implementation over stdio and sse transport"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.2",
]
